# deepbooru-ncnn

./: CMakeLists.txt  README.md  dd_main.cxx  deepbooru-ncnn-1.0.1.ebuild  deepbooru-ncnn-1.0.ebuild
model-dd/: resnet_dd.param
